--- a/核酸管理系统.md
+++ b/核酸管理系统.md
@@ -1,10 +1,10 @@
 # 核酸检测结果管理系统
 
-#### 技术选择
+## 技术选择
 - **后端**: Node.js + Express
 - **前端**: React.js
 
-#### 数据库设计
+### 数据库设计
 创建Supabase表：`nucleic_acid_tests`
 
 必需字段：
@@ -18,7 +18,7 @@
 
 要求：调用Supabase MCP，创建表。
 
-#### 核心功能
+## 核心功能
 
 1. **数据库连接模块**
    - 使用环境变量(.env)存储`SUPABASE_URL`和`SUPABASE_KEY`（调用MCP获取）
@@ -45,14 +45,13 @@
    - 删除前显示记录详情并二次确认
    - 返回操作结果
 
-#### 用户界面
+## 用户界面
 
-如果是Web界面：
 - **首页**: 统计仪表板（总人数、阳性率、最近记录）
 - **详情页**: 完整信息+编辑/添加/删除按钮
 - 使用响应式设计
 
-#### 提供内容
+## 提供内容
 1. 创建完整的SQL表（调用mcp）
 2. 项目目录结构
 3. 环境配置文件示例(.env)（调用mcp）
